Add logout functionality. Adjust connect logic

--- a/assets/_src/styles/admin.scss
+++ b/assets/_src/styles/admin.scss
@@ -9,6 +9,12 @@
 	text-align: center;
 }
 
+.moc-footer {
+	margin: 0 auto;
+	max-width: 800px;
+	text-align: center;
+}
+
 .moc-title-section {
 	align-items: center;
 	clear: both;
