Add loading status

--- a/assets/_src/styles/admin.scss
+++ b/assets/_src/styles/admin.scss
@@ -2,6 +2,37 @@
 	padding-left: 0;
 }
 
+/* Loader animation */
+@keyframes spin {
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+.my-own-cdn {
+
+	& .button[aria-busy="true"] {
+		color: transparent;
+		cursor: not-allowed;
+		opacity: 0.7;
+		pointer-events: none;
+		position: relative;
+	}
+
+	& .button[aria-busy="true"]::after {
+		content: '';
+		position: absolute;
+		top: calc(50% - 10px);
+		right: calc(50% - 0.5rem);
+		width: 1rem;
+		height: 1rem;
+		border: 2px solid transparent;
+		border-top-color: #000000;
+		border-radius: 50%;
+		animation: spin 0.8s linear infinite;
+	}
+}
+
 .moc-header {
 	background: #fff;
 	border-bottom: 1px solid #dcdcde;
